JEDIT 4.4 VERSION HISTORY

{{{ Version 4.4pre1

Thanks to: Alan Ezust, Eric Berry, Shlomy Reinstein and Eric Le Lay.

{{{ Bug fixes

- fix #1439605 - remove installer.VariableGridLayout (r16596).

}}}

{{{ API changes

}}}
{{{ Miscellaneous



}}}

}}}